--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ h5py = "^2.10"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.942"
+pytest = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
